style/style.css
body,
html {
	height: 100%
	width: 100%;
	background-color: #f8f8f8; /*white*/
}

h1,
h2,
h3,
h4,
h5,
h6{
	font-family: sans-serif;
}

h1 {
	font-size: 60px;
	letter-spacing: 10px;
	font-weight: 100;
	
}

p {
	font-size: 30px;
}

/* ========== Main Header ========== */

.main-header {

	height: 100vh;
	width: 100%;
	max-width: 100%;
	background: url(../images/city.jpg) no-repeat center center scroll;
	background-size: cover;
	text-align: center;
}

.main-header > .main-header-content {
	color: #f8f8f8;
	overflow: auto;
}


/* ========== About ========== */

.about {
	width: 100%;
	height: 500px;
	padding: 150px 100px;
}
.about h2 {
	margin-top: 5px;
}


/* ========== Skill Set ========== */

.skillset {
	width: 100%;
	padding: 150px 100px;
	background-color: rgb(51, 122, 183);
	color: #f8f8f8;
	min-height: 700px;
}

.circle {
	height: 150px;
	width: 150px;
	background-color: #f8f8f8;
	color: rgb(51, 122, 183);
	border-radius: 50%;
}

.skillset .circle p {
	font-size: 20px;
}

/* ========== Portfolio ========== */

.portfolio {
	min-height: 1000px;
	width: 100%;
	padding: 150px 100px;
}

.portfolio-box {
	height: 375px;
	width: 400px;
	background-color: rgb(51, 122, 183);
	color: #f8f8f8;
	margin-bottom: 30px;
}
/* ========== Contact ========== */

.contact {
	height: 700px;
	width: 100%;
	background-color: rgb(51, 122, 183);
	color: #f8f8f8;
}

img {
	height: 100px;
	width: 100px;
}

/* ========== Custom Vertical Center ========== */

.vertical-center-parent {
	display: table;
}

.vertical-center-child {
	display: table-cell;
	vertical-align: middle;
}

/* ========== Custom Row ========== */

.row {
	padding-top: 25px;
	padding-bottom: 25px;
}

/* ========== Responsive ========== */ 

@media only screen and (max-width: 767px){
	h1 {
		font-size: 40px;
		letter-spacing: 5px;		
	}
	h2 {
		font-size: 30px;
	}
	p {
		font-size: 20px;
	}

	.main-header, .about, .skillset, .portfolio {
		padding: 20px;
	}
}

